# Creation-Kit-Platform-Extended

./: .gitignore  Creation Kit Platform Extended.sln  Makefile  README.md
.github/workflows/: msbuild.yml
CKPE/: resource_version2.h
CKPE.Common/: build_version.txt  resource_version2.h
CKPE.Common/Include/: CKPE.Common.FormInfoOutputWindow.h  CKPE.Common.ModernTheme.h  CKPE.Common.UITreeView.h
CKPE.Common/Src/: CKPE.Common.EditorUI.cpp  CKPE.Common.FormInfoOutputWindow.cpp  CKPE.Common.Interface.cpp  CKPE.Common.LogWindow.cpp  CKPE.Common.ModernTheme.cpp  CKPE.Common.RTTI.cpp  CKPE.Common.UIListView.cpp  CKPE.Common.UITreeView.cpp
CKPE.Fallout4/: resource_version2.h
CKPE.Fallout4/Src/Patches/: CKPE.Fallout4.Patch.CellViewWindow.cpp  CKPE.Fallout4.Patch.DataWindow.cpp  CKPE.Fallout4.Patch.LayersWindow.cpp  CKPE.Fallout4.Patch.MainWindow.cpp  CKPE.Fallout4.Patch.MemoryManager.cpp  CKPE.Fallout4.Patch.ModernThemePatchAdditional.cpp  CKPE.Fallout4.Patch.ObjectWindow.cpp  CKPE.Fallout4.Patch.OptimizationLoad.cpp
CKPE.PluginAPI/: build_version.txt  resource_version2.h
CKPE.PluginAPI/Include/: CKPE.PluginAPI.Common.h  CKPE.PluginAPI.PluginAPI.h
CKPE.PluginAPI/Src/: CKPE.PluginAPI.PluginManager.cpp
CKPE.SkyrimSE/: resource_version2.h
CKPE.SkyrimSE/Src/Patches/: CKPE.SkyrimSE.Patch.CellViewWindow.cpp  CKPE.SkyrimSE.Patch.DataWindow.cpp  CKPE.SkyrimSE.Patch.LoadOptimization.cpp  CKPE.SkyrimSE.Patch.MainWindow.cpp  CKPE.SkyrimSE.Patch.ModernThemePatchAdditional.cpp  CKPE.SkyrimSE.Patch.NavMeshPseudoDelete.cpp  CKPE.SkyrimSE.Patch.ObjectWindow.cpp
CKPE.Starfield/: build_version.txt  resource_version2.h
CKPE.Starfield/Src/Patches/: CKPE.Starfield.Patch.CellViewWindow.cpp  CKPE.Starfield.Patch.DataWindow.cpp  CKPE.Starfield.Patch.LayersWindow.cpp  CKPE.Starfield.Patch.ModernThemePatchAdditional.cpp  CKPE.Starfield.Patch.ObjectWindow.cpp  CKPE.Starfield.Patch.OptimizationLoad.cpp  CKPE.Starfield.Patch.ProgressWindow.cpp
CKPE.WinHttp/: build_version.txt  resource_version2.h
CKPE/Src/: CKPE.PathUtils.cpp
Creation Kit Platform Extended Core/: Creation Kit Platform Extended Core.vcxproj
Creation Kit Platform Extended Core/Core/: CoreCommon.h
Creation Kit Platform Extended Core/Patches/: UIThemePatch.cpp
Creation Kit Platform Extended Core/Version/: resource_version2.h
Creation Kit Platform Extended Loader/: ckpe_loader.vcxproj
Creation Kit Platform Extended Tools/jdiashow/: jdiashow.vcxproj
Creation Kit Platform Extended Tools/jdiashow/version/: resource_version2.h
Creation Kit Platform Extended Tools/rc2json/: rc2json.vcxproj
Creation Kit Platform Extended Tools/rc2json/version/: resource_version2.h
Database/FO4/: CreationKitPlatformExtended_FO4_Databases.pak
Database/FO4/1_11_137_0/: MemoryManager.relb
Database/SF/1_15_216_0/: BSArchiveManagerModded.relb
Database/SF/1_15_222_0/: AllowSaveESMandMasterESP.relb  CellViewWindow.relb  CreationKitPlatformExtended_SF_1_15_222_0.database  MainWindow.relb  Optimizationload.relb  ProgressWindow.relb
Dependencies/: Toml.vcxproj  libdeflate.vcxproj  libzydis.vcxproj
Dependencies/ImGUI/: ImGUI.vcxproj
Dependencies/vmm/source/: vbits.cpp
Plug-ins/CKPEEmptyPlugin/: CKPEEmptyPlugin.vcxproj
Plug-ins/MyFirstPlugin/: MyFirstPlugin.vcxproj
Plug-ins/WineCompat/: WineCompat.vcxproj  WineCompat.vcxproj.filters
Plug-ins/WineCompat/Include/Iat/: IatPatch.h
Plug-ins/WineCompat/Include/Plugin/: StyleDispatcher.h  WineCompatMessages.h
Plug-ins/WineCompat/Include/ScrollBar/: ScrollBarPaint.h
Plug-ins/WineCompat/Include/Subclass/: ButtonSubclass.h  CheckBoxSubclass.h  ComboBoxSubclass.h  DeferredRestyleSubclass.h  EditSubclass.h  HeaderSubclass.h  ListViewGridSubclass.h  ScrollBarPaintSubclass.h
Plug-ins/WineCompat/Include/Theme/: DarkCheckboxImageList.h  RichEditTheme.h  TreeViewCustomDraw.h
Plug-ins/WineCompat/Src/: dllmain.cpp
Plug-ins/WineCompat/Src/Iat/: IatPatch.cpp
Plug-ins/WineCompat/Src/Plugin/: StyleDispatcher.cpp
Plug-ins/WineCompat/Src/ScrollBar/: ScrollBarPaint.cpp
Plug-ins/WineCompat/Src/Subclass/: ButtonSubclass.cpp  CheckBoxSubclass.cpp  ComboBoxSubclass.cpp  DeferredRestyleSubclass.cpp  EditSubclass.cpp  HeaderSubclass.cpp  ListViewGridSubclass.cpp  ScrollBarPaintSubclass.cpp
Plug-ins/WineCompat/Src/Theme/: DarkCheckboxImageList.cpp  RichEditTheme.cpp  TreeViewCustomDraw.cpp
Resources/: aboutwnd.psd
Stuffs/FO4/: CreationKitPlatformExtended.toml
Stuffs/SF/: CreationKitPlatformExtended.toml
Stuffs/SSE/: CreationKitPlatformExtended.toml
Zipper/: Zipper.vcxproj
cmake/: xwin-toolchain.cmake
linux-build/: CMakeLists.txt  CMakePresets.json
linux-build/shim/: ckpe_game_instantiations.cpp  vcomp_serial_shim.cpp
